--- a/package.json
+++ b/package.json
@@ -17,19 +17,16 @@
     "@types/node": "^20.2.5",
     "@types/webpack": "^5.28.1",
     "@types/webpack-dev-server": "^4.7.2",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
     "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
     "raw-loader": "^4.0.2",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.3",
     "svelte": "^3.59.1",
@@ -40,7 +37,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
-    "webpack": "^5.84.0",
+    "webpack": "^5.85.0",
     "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0",
@@ -49,7 +46,13 @@
   "dependencies": {
     "@monaco-editor/loader": "^1.3.3",
     "@types/webmidi": "^2.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "monaco-editor": "^0.38.0",
-    "monaco-themes": "^0.4.4"
+    "monaco-themes": "^0.4.4",
+    "worker-loader": "^3.0.8"
   }
 }
