--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "removeComments": true,
     "skipLibCheck": true,
     "strict": true,
+    "noImplicitAny": false,
     "noImplicitReturns": true,
     "noUnusedLocals": false,
     "traceResolution": true,
