--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Matt Circles",
   "license": "MIT",
   "devDependencies": {
+    "@tsconfig/svelte": "^4.0.1",
     "@types/node": "^20.2.5",
     "@types/webpack": "^5.28.1",
     "@types/webpack-dev-server": "^4.7.2",
