--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "svelte-check-plugin": "^1.0.4",
     "svelte-loader": "^3.1.8",
     "svelte-preprocess": "^5.0.4",
+    "svg-inline-loader": "^0.8.2",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
